--- a/css/styles.css
+++ b/css/styles.css
@@ -44,48 +44,54 @@ dl,
 dd {
     margin: 0;
 }
-.wrapper{
+
+.wrapper {
     overflow: hidden;
     display: flex;
     flex-direction: column;
     min-height: 100%;
 }
+
 html,
-body{
+body {
     height: 100%;
     line-height: 1;
 }
-body{
+
+body {
     font-family: "Rubik", sans-serif;
     font-size: 12px;
-    color:#616161;
+    color: #616161;
 }
-.main{
+
+.main {
     flex: 1 1 auto;
 }
 
-[class*="__container"]{
+[class*="__container"] {
     max-width: 1087px;
     margin: 0 auto;
     padding: 0 15px;
 }
 
-@media (max-width: 1087px ){
+@media (max-width: 1087px ) {
     [class*="__container"] {
         max-width: 970px;
     }
 }
-@media (max-width: 991px ){
+
+@media (max-width: 991px ) {
     [class*="__container"] {
         max-width: 750px;
     }
 }
 
-@media (max-width: 767px ){
+@media (max-width: 767px ) {
     [class*="__container"] {
         max-width: none;
     }
 }
+
 /*----------------------------------------------*/
 .header {
     position: absolute;
@@ -94,21 +100,26 @@ body{
     left: 0;
     z-index: 50;
 }
+
 .header__container {
     display: flex;
     min-height: 114px;
     align-items: center;
 }
+
 .header__logo {
     position: relative;
     z-index: 5;
 }
+
 .header__logo_mobile {
     display: none;
 }
+
 .header__menu {
     flex: 1 1 auto;
 }
+
 .header__button {
     position: relative;
     z-index: 5;
@@ -117,22 +128,25 @@ body{
     justify-content: flex-end;
     align-items: center;
 }
+
 /*------------------------------------------------*/
 .menu {
     display: flex;
     justify-content: flex-end;
     padding: 0 40px 0 0;
 }
+
 .menu__list {
     display: flex;
 
 }
+
 .menu__item {
     margin: 0 40px 0 0;
 }
 
 .menu__link {
-    font-family: "Raleway", sans-serif ;
+    font-family: "Raleway", sans-serif;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 10px;
@@ -140,109 +154,168 @@ body{
     color: #000;
     letter-spacing: 1px;
 }
-.menu__link:hover{
+
+.menu__link:hover {
     text-decoration: underline;
 }
 
-@media (max-width: 991px ){
-    .header__container{
-    min-height: 80px;
+@media (max-width: 991px ) {
+    .header__container {
+        min-height: 80px;
     }
-    .header__button{
+
+    .header__button {
         flex: 0 0 170px;
     }
-    .menu__item{
+
+    .menu__item {
         margin: 0 30px 0 0;
     }
 }
-@media (max-width:767px){
-    .menu__body{
+
+@media (max-width: 767px) {
+    .menu__body {
         position: fixed;
         top: 0;
-        left:-100%;
-        width:100%;
-        height:100%;
-        background-color: #eee;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: #fff;
         padding: 90px 15px 30px 15px;
+        transition: left 0.3s ease 0s;
     }
-    .menu__body:target{
-        left:0;
+
+    .header:target .menu__body{
+        left: 0;
 
     }
-    .menu__list{
+    .header:target .menu__body::before{
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 80px;
+        width: 100%;
+        background-color: #fff;
+    }
+    .menu__list {
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-    .menu__item{
+
+    .menu__item {
         margin: 0 0 25px 0;
     }
-    .menu__item:last-child{
+
+    .menu__item:last-child {
         margin-bottom: 0;
     }
-    .menu__link{
+
+    .menu__link {
         font-size: 20px;
     }
 
 }
-@media (max-width: 479px){
-    .header__logo{
+
+@media (max-width: 479px) {
+    .header__logo {
         flex: 0 0 40px;
         overflow: hidden;
     }
+
     .header__logo_desktop {
         display: none;
     }
+
     .header__logo_mobile {
         display: block;
     }
 }
+
 /*------------------------------------------------------------*/
 .button {
     display: inline-block;
-    font-family: "Raleway", sans-serif ;
+    font-family: "Raleway", sans-serif;
     text-transform: uppercase;
     font-weight: 800;
     font-size: 10px;
     line-height: 1.2;
     letter-spacing: 1px;
     color: #FCFDFE;
-    padding: 14px 30px ;
+    padding: 14px 30px;
     border-right: 5px;
     background-color: #EC5863;
     transition: background-color 0.3s ease 0s;
 }
-.button:hover{
+
+.button:hover {
     background-color: #F37a82;
 }
+
 .button_blue {
     background-color: #4285F4;
 }
+
 .button_blue:hover {
     background-color: #70a3f7;
 }
+
 /*--------------------------------------------------------------------*/
-.icon-menu{
+.close-icon-menu,
+.icon-menu {
     display: none;
 }
-@media (max-width: 767px){
-.icon-menu{
-    display: flex;
-    position: relative;
-    flex: 0 0 30px;
-    height: 18px;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: 0 0 0 20px;
-}
-.icon-menu::before,
-.icon-menu::after{
-    content: "";
-    background-color: #000;
-    height: 2px;
-}
-.icon-menu span{
-    height: 2px;
-    background-color: #000;
-}
+
+@media (max-width: 767px) {
+    .icon-menu {
+        display: flex;
+        position: relative;
+        flex: 0 0 30px;
+        height: 18px;
+        flex-direction: column;
+        justify-content: space-between;
+        margin: 0 0 0 20px;
+    }
+
+    .icon-menu::before,
+    .icon-menu::after {
+        content: "";
+        background-color: #000;
+        height: 2px;
+    }
+
+    .icon-menu span {
+        height: 2px;
+        background-color: #000;
+    }
+    .close-icon-menu{
+        flex: 0 0 30px;
+        height: 30px;
+        position: relative;
+        margin: 0 0 0 20px;
+    }
+    .close-icon-menu::before,
+    .close-icon-menu::after {
+        content: "";
+        background-color: #000;
+        height: 2px;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: 100%;
+    }
+    .close-icon-menu::before{
+        transform: rotate(45deg);
+    }
+    .close-icon-menu::after {
+        transform: rotate(-45deg) ;
+    }
+    .header:target .icon-menu{
+        display: none;
+    }
+    .header:target .close-icon-menu{
+        display: flex;
+    }
 }
