--- a/css/styles.css
+++ b/css/styles.css
@@ -333,6 +333,10 @@ body {
 
 }
 
+.block-text_center {
+    text-align: center;
+}
+
 .block-text__title {
     font-weight: 700;
     font-size: 44px;
@@ -354,6 +358,11 @@ body {
 
 .block-text__text {
     line-height: 138.5%;
+}
+
+.block-text__text_mw {
+    max-width: 620px;
+    margin: 0 auto;
 }
 
 .block-text__text:not(:last-child) {
@@ -522,6 +531,7 @@ body {
     border-radius: 16px;
     position: relative;
     z-index: 2;
+    width: 61.5%;
 }
 
 .media-stay-safe__item {
@@ -550,4 +560,417 @@ body {
     right: 34px;
 }
 
+@media (max-width: 991px) {
+    .stay-safe {
+        padding: 40px 0;
+    }
+}
 
+@media (min-width: 991px) {
+    .stay-safe__media {
+        padding: 0 0 0 47px;
+    }
+}
+
+@media (max-width: 767px) {
+    .stay-safe {
+        padding: 30px 0;
+    }
+
+    .stay-safe__container {
+        flex-direction: column-reverse;
+    }
+
+    .stay-safe__content {
+        margin: 0 0 30px 0;
+    }
+}
+
+@media (max-width: 479px) {
+    .media-stay-safe {
+        width: 290px;
+    }
+}
+
+/*-------------------------------------------------------------*/
+.experts {
+    background-color: #fafbfd;
+    padding: 103px 0 116px 0;
+}
+
+.experts__container {
+}
+
+.experts__statistic {
+}
+
+.experts__block-text {
+    max-width: 400px;
+}
+
+.statistic-experts {
+    max-width: 655px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.experts__body {
+    display: flex;
+    align-items: center;
+}
+
+.experts__content {
+    flex: 0 1 50%;
+    padding: 0 20px 0 0;
+}
+
+.experts__video {
+    flex: 0 1 50%;
+    padding: 0 0 30% 0;
+    position: relative;
+    box-shadow: 0 4px 18px rgba(88, 126, 236, 0.18);
+    border-radius: 8px;
+    overflow: hidden;
+
+}
+
+.experts__video iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+
+@media (max-width: 767px) {
+    .experts {
+        padding: 80px 0 30px 0;
+    }
+
+    .experts__body {
+        align-items: stretch;
+        flex-direction: column;
+    }
+
+    .experts__video {
+        padding: 0 0 58% 0;
+    }
+
+    .experts__content {
+        padding: 0;
+        margin: 0 0 30px 0;
+    }
+
+}
+
+.statistic-experts__body {
+    background: #fff;
+    box-shadow: 0 2px 24px rgba(88, 126, 236, 0.15);
+    border-radius: 16px;
+    position: relative;
+    z-index: 2;
+    margin: 0 0 80px 0;
+}
+
+.statistic-experts__decor {
+    position: absolute;
+    background-color: #EC5863;
+    border-radius: 30px;
+}
+
+.statistic-experts__decor_1 {
+    width: 65px;
+    height: 65px;
+    transform: rotate(-30deg);
+    bottom: -21px;
+    left: -21px;
+    border-radius: 16px;
+}
+
+.statistic-experts__decor_2 {
+    width: 97px;
+    height: 97px;
+    right: 50%;
+    top: -40px;
+    transform: rotate(30deg);
+}
+
+.statistic-experts__decor_3 {
+    width: 128px;
+    height: 128px;
+    right: -65px;
+    top: 0;
+    transform: rotate(30deg);
+}
+
+.body-statistic-experts {
+    padding: 25px 80px;
+    display: flex;
+    align-items: center;
+}
+
+.body-statistics-experts__item {
+    flex: 0 1 25%;
+    text-align: center;
+}
+
+.body-statistics-experts__item:last-child {
+    flex: 0 1 50%;
+}
+
+
+.body-statistics-experts__value {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.2;
+    letter-spacing: 1px;
+    color: #EC5863;
+    margin-bottom: 5px;
+}
+
+.body-statistics-experts__text {
+    font-weight: bold;
+    font-size: 11px;
+    line-height: 1.8;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color: #000;
+}
+
+@media (max-width: 767px) {
+    .statistic-experts__body {
+        margin: 0 0 50px 0;
+    }
+
+    .body-statistic-experts {
+        padding: 25px;
+    }
+}
+
+@media (max-width: 479px) {
+    .body-statistic-experts {
+        flex-direction: column;
+    }
+
+    .body-statistics-experts__item:not(:last-child) {
+        margin: 0 0 15px 0;
+
+    }
+}
+
+/*------------------------------------------------------*/
+/*.healthcare {
+    background-color: #fafbfd;
+    padding: 80px 0 30px 0;
+}
+
+.healthcare__container {
+}
+
+.healthcare__block-text {
+    margin: 0 0 45px 0;
+}
+
+.healthcare__items {
+    display: flex;
+}
+
+.healthcare__item {
+    flex: 0 1 33.333%;
+    max-width: 980px;
+    margin: 0 auto;
+    gap: 72px;
+}
+
+.item-healthcare {
+    background-color: #fff;
+    box-shadow: 0 4px 18px rgba(88, 126, 236, 0.18);
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 35px 17px;
+}
+
+.item-healthcare__icon {
+    margin: 0 0 58px 0;
+}
+
+.item-healthcare__title {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 138.5%;
+    color: black;
+    margin: 0 0 4px 0;
+}
+
+.item-healthcare__text {
+    line-height: 138.5%;
+}
+.item-healthcare_1::before,
+.item-healthcare_1::after{
+    content: "";
+    position: absolute;
+    background-color: #EC5863;
+    border-radius: 16px;
+}
+
+.item-healthcare_1::before {
+    content: "";
+    width: 65px;
+    height: 65px;
+    bottom: 0;
+    left: 0;
+    transform: rotate(-30deg);
+}
+*/
+.healthcare {
+    padding: 80px 0 30px 0;
+    background-color: #fafbfd;
+}
+
+.healthcare__container {
+}
+
+.healthcare__block-text {
+    margin: 0 0 45px 0;
+}
+
+.healthcare__items {
+    display: flex;
+}
+
+.healthcare__item {
+
+}
+.healthcare__column{
+    position: relative;
+    padding: 0 36px;
+    flex: 0 1 33.333%;
+
+}
+
+.item-healthcare {
+    height:100% ;
+    position: relative;
+    z-index: 2;
+    background-color: #fff;
+    box-shadow: 0 4px 18px rgba(88, 126, 236, 0.18);
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 36px 17px;
+}
+
+.item-healthcare__icon {
+    margin: 0 0 58px 0;
+}
+
+.item-healthcare__title {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 138.5%;
+    color: #000;
+    margin: 0 0 4px 0;
+
+}
+
+.item-healthcare__text {
+    line-height: 138.5%;
+}
+
+
+.healthcare__column_1::before,
+.healthcare__column_1::after{
+    content: "";
+    position: absolute;
+    background-color: #EC5863;
+    border-radius: 16px;
+}
+
+.healthcare__column_1::before {
+    width: 65px;
+    height: 65px;
+    bottom: -35px;
+    left: 15px;
+    transform: rotate(-30deg);
+}
+.healthcare__column_1::after {
+    width: 97px;
+    height: 97px;
+    top: 35px;
+    right: -10px;
+    border-radius: 30px;
+    transform: rotate(30deg);
+}
+.healthcare__column_2::after {
+    content: "";
+    position: absolute;
+    background-color: #EC5863;
+    width: 127px;
+    height: 127px;
+    bottom: -35px;
+    right: -35px;
+    border-radius: 30px;
+    transform: rotate(55deg);
+}
+.healthcare__column_3::after {
+    content: "";
+    position: absolute;
+    background-color: #EC5863;
+    width: 65px;
+    height: 65px;
+    top: -25px;
+    right: 10px;
+    border-radius: 16px;
+    transform: rotate(45deg);
+}
+@media (max-width: 1087px) {
+    .healthcare__column{
+        padding: 0 15px;
+    }
+
+}
+@media (max-width: 991px) {
+    .healthcare {
+        padding: 30px 0;
+    }
+    .healthcare__items{
+        flex-direction: column;
+    }
+    .healthcare__column:not(:last-child){
+        margin: 0 0 25px 0;
+    }
+
+}
+/*------------------------------------------------------*/
+.footer {
+    padding: 45px 0;
+    background-color: #fafbfd;
+}
+
+.footer__container {
+}
+
+.footer__items {
+    display: flex;
+    column-gap:50px;
+    row-gap:20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer__item {
+}
+@media (max-width: 500px){
+    .footer{
+        padding: 30px 0;
+    }
+    .footer__items{
+        flex-direction: column;
+    }
+}
